- Updated URL in About

--- a/web/about/index.html
+++ b/web/about/index.html
@@ -53,7 +53,7 @@
     <br /><br />
     Very simple. Just start typing. Everything is saved to your system automatically.
     <br /><br />
-    Try it now at: <a href="http://note5.jasonhanley.com/" target="_">note5.jasonhanley.com</a> 
+    Try it now at: <a href="http://h5note.com/" target="_">h5note.com</a> 
     <br /><br />
     Works on: Chrome, Firefox, Safari, Internet Explorer, iPad, iPhone, Android, Blackberry OS6+, and more!
     <br /><br />
