- Updated names and versions

--- a/web/about/index.html
+++ b/web/about/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>note5: An HTML5 Notepad</title>
+  <title>h5note: HTML5 Notepad</title>
   <meta name="description" content="Inspired by the iPad 'Notes' application. Very simple. Just start typing. Everything is saved to your system automatically.">
   <meta name="author" content="Jason M. Hanley">
   <link rel="shortcut icon" href="favicon.ico">
